[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/GameAssets/Numbers/OneHundred.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EnemyParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/EnemyDeath.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[node name="EnemyDeath" type="Node2D"]
script = ExtResource( 3 )

[node name="EnemyParticles" parent="." instance=ExtResource( 2 )]

[node name="Points" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 1.5
one_shot = true
texture = ExtResource( 1 )
gravity = Vector2( 0, -15 )
scale_amount = 0.2
color_ramp = SubResource( 1 )

[node name="ParticlesEnd" type="Timer" parent="."]

[connection signal="timeout" from="ParticlesEnd" to="." method="_on_Timer_timeout"]
